add to grayscale feature

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,11 +11,17 @@
 	<link rel="stylesheet" href="/public/{{assets.site.css}}">
 </head>
 <body>
-
 	{{{ body }}}
-
-	<div id="app" style="display: inline-table;"></div>
-
+	
+	<div class="row">
+		<div class="col-6">
+			<canvas id="canvas-video" width="640" height="480"></canvas>
+		</div>
+		<div class="col-6">
+			<div id="app" style="display: inline-table;"></div>
+		</div>
+	</div>
+	<script src="/socket.io/socket.io.js"></script>
     <script src="/public/vendor.bundle.js"></script>
     <script src="/public/{{assets.site.js}}"></script>
 
