my first commit

--- a/views/pages/home.hbs
+++ b/views/pages/home.hbs
@@ -1,4 +1,4 @@
 <div>
-	<h1>Kriptografi Visual</h1>
-	<p>untuk Menjaga Privasi Wajahn.</p>
+	<h1>Hi, guys welcome to the TEAM</h1>
+	<p>you have successfully install this template.</p>
 </div>
